# ormx

./: .gitignore  Cargo.toml  LICENSE  README.md  mariadb.sh  schema.sql
example/: Cargo.toml  sqlx-data.json
example-mysql/: Cargo.toml
example-mysql/src/: main.rs  query2.rs
example-postgres/: Cargo.toml  README.md
example-postgres/src/: main.rs  query2.rs
example-sqlite/: .env  Cargo.toml  README.md
example-sqlite/migrations/: 20211108025529_create.sql
example-sqlite/src/: build.rs  main.rs  query2.rs
example/src/: main.rs  query2.rs
ormx/: Cargo.toml  README.md
ormx-macros/: Cargo.toml
ormx-macros/src/: attrs.rs  lib.rs  utils.rs
ormx-macros/src/backend/: mod.rs
ormx-macros/src/backend/common/: mod.rs  table.rs
ormx-macros/src/backend/mysql/: get.rs  insert.rs  mod.rs  patch.rs  set.rs  table.rs
ormx-macros/src/backend/postgres/: get_any.rs  get_by_any.rs  insert.rs  mod.rs
ormx-macros/src/patch/: mod.rs  parse.rs
ormx-macros/src/table/: mod.rs  parse.rs
ormx/src/: lib.rs
ormx/src/query2/: map.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
scripts/: mariadb.sh  mysql-schema.sql  mysql.sh  postgres-schema.sql  postgres.sh
