[package]
name = "example-sqlite"
version = "0.1.0"
authors = ["moritz"]
edition = "2018"
build = "src/build.rs"

[dependencies]
ormx = { path = "../ormx", features = ["sqlite"] }
tokio = { version = "1.1", features = ["full"] }
anyhow = "1"
dotenv = "0.15"
chrono = "0.4"
simple_logger = "1"
log = "0.4"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "sqlite", "runtime-tokio-rustls", "chrono", "offline", "migrate"]

[build-dependencies]
anyhow = "1"
dotenv = "0.15"
tokio = { version = "1.1", features = ["full"] }

[build-dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "sqlite", "runtime-tokio-rustls", "chrono", "offline", "migrate"]
