[package]
name = "ormx-macros"
version = "0.0.1-alpha.3"
authors = ["moritz"]
edition = "2018"
description = "lightweight procedural macros bringing orm-like features to sqlx"
homepage = "https://github.com/NyxCode/ormx"
license = "MIT"

[lib]
proc-macro = true

[features]
sqlite = []
mysql = []
postgres = []

[dependencies]
itertools = "0.9"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
once_cell = "1"
