[package]
name = "ormx"
version = "0.0.1-alpha.6"
authors = ["Moritz Bischof"]
edition = "2018"
license = "MIT"
description = "lightweight procedural macros bringing orm-like features to sqlx"
homepage = "https://github.com/NyxCode/ormx"

[features]
default = ["sqlx/runtime-tokio", "mysql"]
mysql = ["sqlx/mysql", "ormx-macros/mysql"]
sqlite = ["sqlx/sqlite", "ormx-macros/sqlite"]
postgres = ["sqlx/postgres", "ormx-macros/postgres"]

[dependencies]
ormx-macros = { path = "../ormx-macros", version = "0.0.1-alpha.3" }
futures = "0.3"

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = ["macros"]

[dev-dependencies]
tokio = { version = "0.3", features = ["full"] }
anyhow = "1"