[package]
name = "ormx"
version = "0.3.0"
authors = ["Moritz Bischof"]
edition = "2018"
license = "MIT"
description = "lightweight procedural macros bringing orm-like features to sqlx"
homepage = "https://github.com/NyxCode/ormx"
repository = "https://github.com/NyxCode/ormx"

[package.metadata.docs.rs]
features = ["_docs-rs-build"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
mysql = ["sqlx/mysql", "ormx-macros/mysql"]
sqlite = ["sqlx/sqlite", "ormx-macros/sqlite"]
postgres = ["sqlx/postgres", "ormx-macros/postgres"]

_docs-rs-build = ["sqlx/runtime-tokio-rustls", "postgres"]

[dependencies]
ormx-macros = { path = "../ormx-macros", version = "0.2" }
futures = "0.3"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros"]

[dev-dependencies]
tokio = { version = "1.1", features = ["full"] }
anyhow = "1"
